# mixrank-product-interview

./: Cargo.toml  README.md  default.nix  style.css
src/: db.rs  lib.rs  main.rs  ui.rs
